--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ office.name }}{% endblock %}
 
 {% block body %}
-<div ng-controller="UserController">
+<div ng-controller="HomeOfficeController">
     <div class="row">
         <ol class="breadcrumb" style="margin: 0 -30px; border-radius:0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
             <li class="active">
@@ -67,14 +67,14 @@
         </div>
     </div>
 
-    <div class="row" ng-init="GetContactLists()">
+    <div class="row" ng-init="GetContactLists();">
         <div class="col-md-4">
             <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 427px; overflow-y: auto;">
                 <li class="list-group-item active"  style="background:#ddedf4; color:#606060;">
                     <b>Contact list</b>
                 </li>
                 <li class="list-group-item  contact-list-active" ng-repeat="contact in contacts">
-                    <div class="row ">
+                    <div class="row">
                         <div class="col-xs-3">
                             <img class="img-responsive img-circle" src="{{ asset('') ~ 'documents/' ~ app.user.avatar }}" alt="avatar"/>
                         </div>
@@ -100,11 +100,11 @@
                         {% endif %}
                         <ul class="chat">
                             <li ng-repeat="post in posts" highlight style="border-bottom: none;"  class="clearfix" ng-class="{'right': {{ app.user.id }} == post.user.id, 'left': {{ app.user.id }} != post.user.id }">
-                    <span class="chat-img"
-                          ng-class="{'pull-right': {{ app.user.id }} == post.user.id, 'pull-left': {{ app.user.id }} != post.user.id }"
-                          ng-init="avatar = generateAsset('{{ asset('') }}', 'documents/' + post.user.avatar)">
-                            <img src="#" ng-src="[[avatar]]" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
-                    </span>
+                                <span class="chat-img"
+                                      ng-class="{'pull-right': {{ app.user.id }} == post.user.id, 'pull-left': {{ app.user.id }} != post.user.id }"
+                                      ng-init="avatar = generateAsset('{{ asset('') }}', 'documents/' + post.user.avatar)">
+                                        <img src="#" ng-src="[[avatar]]" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
+                                </span>
                                 <div class="chat-body clearfix">
                                     <div class="header" style="height: 28px;">
                                         <strong class="primary-font"
@@ -118,26 +118,26 @@
                                             <i ng-if="post.edited" class="fa fa-edit"></i>
                                         </small>
                                     </div>
-                        <pre style="white-space: pre-line;">
-                            <span ng-bind-html="post.message"></span>
-                        </pre>
+                                    <pre style="white-space: pre-line;">
+                                        <span ng-bind-html="post.message"></span>
+                                    </pre>
                                 </div>
                             </li>
                         </ul>
                     </div>
                     <div class="list-group-item">
                         <form class="input-group input-group-lg">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" style="height: 65px;" data-placement="top" id="add_dialog_btn"  data-toggle="modal" data-target="#add_dialog">
-                        <i class="fa fa-file"></i>
-                    </button>
-                </span>
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button" style="height: 65px;" data-placement="top" id="add_dialog_btn"  data-toggle="modal" data-target="#add_dialog">
+                                    <i class="fa fa-file"></i>
+                                </button>
+                            </span>
                             <textarea id="textarea-post"  name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-model="message"></textarea>
-                <span class="input-group-btn">
-                    <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
-                        <span>Post</span>
-                    </button>
-                </span>
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
+                                    <span>Post</span>
+                                </button>
+                            </span>
                         </form>
                         <div id="slide-down-menu-screenshots" cg-busy="documentPromise" style="display: none;">
                             <div id="div-screenshot" style="display: none; width: auto;height: auto;">
@@ -165,10 +165,10 @@
         JSON_URLS.addPost = "{{ path('zectranet_office_add_post', { 'office_id': office.id }) }}";
         JSON_URLS.getPosts = "{{ path('zectranet_office_get_post', { 'office_id': office.id }) }}";
         JSON_URLS.InsertScreenshotsInPHP = "{{ path('zectranet_InsertScreenshotsInPHP') }}";
+        JSON_URLS.getContactList = "{{ path('zectranet_get_contact_list') }}";
     </script>
-    <script src="{{ asset('bundles/zectranet/js/custom/chatController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/custom/documentsController.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/zectranet/js/custom/officeController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/custom/homeOfficeController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/upload/jquery.knob.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/upload/jquery.ui.widget.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/upload/jquery.iframe-transport.js') }}" type="text/javascript"></script>
